--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/groupBarScript.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -92,7 +94,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/groupBarScript.js"
+            ]
           }
         },
         "lint": {
