--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/groupBarScript.js"
+              "src/groupBarScript.js",
+              "src/legendDisplayChange.js"
             ]
           },
           "configurations": {
@@ -95,7 +96,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/groupBarScript.js"
+              "src/groupBarScript.js",
+              "src/legendDisplayChange.js"
             ]
           }
         },
